# cpd

./: .gitignore  README.md
Delivery1/: simpar-omp.c  simpar.c
Particles Simulation/: CMakeLists.txt  Header.h  Main.c  Particles Simulation.sln  Particles Simulation.vcxproj  Particles Simulation.vcxproj.filters  force.c  init_particles.c  simpar-omp.c  simpar.c
simpar/: CMakeLists.txt  Makefile  simpar  simpar.c  simpar_exe.sh
simpar-mpi/: CMakeLists.txt  simpar-mpi  simpar-mpi.c  testing-mpi  testing-mpi.c
simpar-mpi-omp/: Makefile  simpar-mpi  simpar-mpi.c  testing-mpi  testing-mpi.c
simpar-mpi-omp-time/: simpar-mpi  simpar-mpi.c  simpar_exe.sh
simpar-mpi-particles/: Makefile  simpar-mpi  simpar-mpi.c
simpar-mpi2/: simpar-mpi.c
simpar-mpi2-omp/: Makefile  simpar-mpi  simpar-mpi.c
simpar-omp/: Makefile  simpar-omp  simpar-omp.c  simpar-omp_exe.sh
simpar-omp-1/: CMakeLists.txt  Makefile  simpar-omp.1.c  simpar-omp_exe.sh
